# maple-alarm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  plan.md
.github/workflows/: release.yml
deprecated/src/: app.rs  power.rs
sprints/: IMPROVEMENT_PLAN.md  PLAN_VOLUME.md  sprint.html
src/: alarm.rs  instance.rs  main.rs  state.rs  timer.rs  ui.rs
