[package]
name = "alarm-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu"] }
tray-icon = "0.19"

[build-dependencies]
winresource = "0.1"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_Power",
    "Win32_Media",
    "Win32_UI_Input_KeyboardAndMouse",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "alarm-app"
path = "src/main.rs"
