[package]
name = "alarm-app"
version = "0.1.0"
edition = "2021"

[dependencies]
native-windows-gui = "1.0"
native-windows-derive = "1.0"

[build-dependencies]
winresource = "0.1"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_Power",
    "Win32_Media",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "timer"
path = "src/main.rs"
